fixed: create overflow for modal

--- a/css/style.css
+++ b/css/style.css
@@ -2173,6 +2173,9 @@ template {
   }
   .modal__dialog {
     padding: 33px 55px;
+    max-height: 517px;
+    height: 100%;
+    overflow-y: auto;
   }
 }
 
