--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -321,7 +321,10 @@
       flex-basis: 100%
   .modal
     &__dialog
-      padding: 33px 55px    
+      padding: 33px 55px 
+      max-height: 517px
+      height: 100%
+      overflow-y: auto   
 @media (max-width: 576px)
   .logo
     max-width: 99px
